force-app/main/default/objects/productInfo__c/productInfo__c.object-meta.xml
<CustomObject>
    <label>productInfo</label>
    <nameField>
        <label>productInfo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>productInfos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>