force-app/main/default/objects/productInfo__c/fields/Opportunity__c.field-meta.xml
<CustomField>

 <fullName>Opportunity__c</fullName>

 <deleteConstraint>SetNull</deleteConstraint>


<label>Opportunity</label>

<referenceTo>Opportunity</referenceTo>

<relationshipLabel>productInfos</relationshipLabel>

 <relationshipName>productInfos</relationshipName>




<type>Lookup</type>

</CustomField>