force-app/main/default/objects/productInfo__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product_Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>