force-app/main/default/objects/productInfo__c/fields/Product_No__c.field-meta.xml
<CustomField>
    <fullName>Product_No__c</fullName>
    <displayFormat>P-{00000}</displayFormat>
    <label>Product_No</label>
    <type>AutoNumber</type>
</CustomField>